--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Course!</h1>
+<h1>Hello Course! It's Vanesa speaking! Hello Genti (:</h1>
 </body>
 </html>
