--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>It's Vanesa speaking! Hello Genti (: <3</h1>
+<h1>It's Vanesa speaking! Hello Kejs! (: <3</h1>
 </body>
+<h2> Welcome to my new babygirl! </h2>
 </html>
